--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Biotropo</span></strong>. All Rights Reserved
       </div>
-        Designed by ...</a>
+        Designed by Nenemi Software</a>
       </div>
     </div>
   </footer><!-- End Footer -->
