Color changes, stile and footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <link href="assets/img/LogosBiotropo/a-color-1.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
@@ -43,10 +45,10 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
+          <li><a class="getstarted scrollto" href="#about">Convocatoria</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -58,16 +60,16 @@
   <section id="hero">
 
     <div class="container">
-      <div class="row d-flex align-items-center"">
-      <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
-        <h1>Biotropo</h1>
-        <h2>Festival de cortometraje y video corto de Divulgación de la ciencia y el Ambiente.</h2>
-        <a href="#about" class="btn-get-started scrollto">Get Started</a>
+      <div class="row d-flex align-items-center">
+        <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
+          <h1>Biotropo</h1>
+          <h2>Festival de cortometraje y video corto de Divulgación de la Ciencia y el Ambiente.</h2>
+          <a href="#about" class="btn-get-started scrollto">Convocatoria</a>
+        </div>
+        <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
+          <img src="assets/img/LogosBiotropo/a-color-2.png" class="img-fluid" alt="">
+        </div>
       </div>
-      <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-        <img src="assets/img/LogosBiotropo/a-color-2.png" class="img-fluid" alt="">
-      </div>
-    </div>
     </div>
 
   </section><!-- End Hero -->
@@ -81,9 +83,10 @@
 
         <div class="col">
           <div class="content d-flex flex-column justify-content-center ps-0 ps-xl-4" text-align="right">
-            <h3 data-aos="fade-in" data-aos-delay="100" >¿Quienes Somos?</h3>
+            <h3 data-aos="fade-in" data-aos-delay="100">¿Quiénes somos?</h3>
             <p data-aos="fade-in">
-              Surge por la inquietud de científicos y ambientalistas de promover y concientizar a la sociedad sobre la problemática ambiental y el entendimiento de las ciencias como solución, promoviendo actividades
+              Surge por la inquietud de científicos y ambientalistas de promover y concientizar a la sociedad sobre la
+              problemática ambiental y el entendimiento de las ciencias como solución, promoviendo actividades
               de divulgación y la producción de material audio visual accesible para todo público.
 
             </p>
@@ -108,17 +111,19 @@
                 <h4><a href="#">Beatae veritatis</a></h4>
                 <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
               </div> -->
-            </div>
-          </div><!-- End .content-->
-        </div>
-
-        <div style="text-align:center;">
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bOwNO6lCfIg" title="YouTube video player"
-              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen></iframe>
           </div>
-  
-        </div>
+        </div><!-- End .content-->
+      </div>
+      <br>
+      <br>
+      <div style="text-align:center;">
+        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bOwNO6lCfIg" title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+
+      </div>
 
       </div>
     </section><!-- End About Section -->
@@ -255,9 +260,10 @@
         </div>
 
       </div>
-    </section> --><!-- End Team Section -->
+    </section> -->
+    <!-- End Team Section -->
 
-  
+
 
     <!-- ======= Frequently Asked Questions Section ======= -->
     <!-- <section id="faq" class="faq section-bg">
@@ -397,9 +403,9 @@
         </div>
 
       </div>
-    </section> --> 
-    
-  <!--End Contact Section -->
+    </section> -->
+
+    <!--End Contact Section -->
 
   </main><!-- End #main -->
 
@@ -419,8 +425,10 @@
         <div class="social-links">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="https://www.facebook.com/Biotropo.Festival" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/biotropo.festival?igshid=YmMyMTA2M2Y=" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://api.whatsapp.com/send?phone=5213310638631&text=Hola%20Bienvenid@s%20a%20Biotropo!" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://instagram.com/biotropo.festival?igshid=YmMyMTA2M2Y=" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=5213310638631&text=Hola%20Bienvenid@s%20a%20Biotropo!"
+            class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
         </div>
@@ -430,9 +438,14 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Biotropo</span></strong>. All Rights Reserved
-      </div>
-        Designed by Nenemi Software</a>
+        <a href="">&copy; Copyright <strong><span>Biotropo</span></strong>. All Rights Reserved</a>
+      </div> <br>
+
+      <div>
+        <a>Designed by Nenemi Software</a>
+        <div>
+          <img src="assets/img/LogoNenemi/Isotipo-Color.png" class="nenemilogo" alt="">
+        </div>
       </div>
     </div>
   </footer><!-- End Footer -->
