Fix: copy right section

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
         <a href="">&copy; Copyright <strong><span>Biotropo</span></strong>. All Rights Reserved</a>
       </div> <br>
 
-      <div>
+      <div class="copyright">
         <a>Designed by Nenemi Software</a>
         <div>
           <img src="assets/img/LogoNenemi/Isotipo-Color.png" class="nenemilogo" alt="">
