Fix: Youtube video

--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
       <br>
       <br>
       <div style="text-align:center;">
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=bOwNO6lCfIg" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bOwNO6lCfIg" title="YouTube video player"
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen></iframe>
       </div>
 
