--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-          <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
           <li><a class="getstarted scrollto" href="#about">Convocatoria</a></li>
         </ul>
@@ -82,26 +82,39 @@
       <div class="container">
 
         <div class="col">
-          <div class="content d-flex flex-column justify-content-center ps-0 ps-xl-4" text-align="right">
-            <h3 data-aos="fade-in" data-aos-delay="100">¿Quiénes somos?</h3>
+          <div class="content d-flex flex-column justify-content-center ps-0 ps-xl-4" text-align="center">
+            <!-- <h3 data-aos="fade-in" data-aos-delay="100">¿Quiénes somos?</h3>
+            <p data-aos="fade-in">
+              Biotropo es un festival de cortometrajes y videos cortos para redes sociales con la finalidad de divulgar la cultura
+              ambiental y el conocimiento científico.
+            </p>
+            <br>
+            <br>
+            <h3 data-aos="fade-in" data-aos-delay="100">¿De dónde nace?</h3>
             <p data-aos="fade-in">
               Surge por la inquietud de científicos y ambientalistas de promover y concientizar a la sociedad sobre la
               problemática ambiental y el entendimiento de las ciencias como solución, promoviendo actividades
               de divulgación y la producción de material audio visual accesible para todo público.
-
-            </p>
-            <!-- <div class="row gy-4 mt-3">
+            </p> -->
+            <div class="row gy-4 mt-3">
               <div class="col-md-6 icon-box" data-aos="fade-up">
-                <i class="bx bx-receipt"></i>
-                <h4><a href="#">Corporis voluptates sit</a></h4>
-                <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                <i class="bi bi-person-badge"></i>
+                <h4><a href="#">¿Quiénes somos?</a></h4>
+                <p>
+                  Biotropo es un festival de cortometrajes y videos cortos para redes sociales con la finalidad de divulgar la cultura
+                  ambiental y el conocimiento científico.
+                </p>
               </div>
               <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <i class="bx bx-cube-alt"></i>
-                <h4><a href="#">Ullamco laboris nisi</a></h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                <i class="bi bi-cloud-sun"></i>
+                <h4><a href="#">¿De dónde nace?</a></h4>
+                <p>
+                  Surge por la inquietud de científicos y ambientalistas de promover y concientizar a la sociedad sobre la
+                  problemática ambiental y el entendimiento de las ciencias como solución, promoviendo actividades
+                  de divulgación y la producción de material audio visual accesible para todo público.
+                </p>
               </div>
-              <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+              <!-- <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
                 <i class="bx bx-images"></i>
                 <h4><a href="#">Labore consequatur</a></h4>
                 <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
