feat: agregada la convocatoria

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-          <li><a class="getstarted scrollto" href="#about">Convocatoria</a></li>
+          <li><a class="getstarted scrollto" href="assets/img/PDF/Convocatoria Biotropo 2022.pdf" target="_blank">Convocatoria</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -64,13 +64,14 @@
         <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
           <h1>Biotropo</h1>
           <h2>Festival de cortometraje y video corto de Divulgación de la Ciencia y el Ambiente.</h2>
-          <a href="#about" class="btn-get-started scrollto">Convocatoria</a>
+          <a href="assets/img/PDF/Convocatoria Biotropo 2022.pdf" target="_blank" class="btn-get-started scrollto">Convocatoria</a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
           <img src="assets/img/LogosBiotropo/a-color-2.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
+    
 
   </section><!-- End Hero -->
 
@@ -460,8 +461,12 @@
         </div>
       </div>
     </div>
+
   </footer><!-- End Footer -->
 
+  <!-- <div id="logoscolabs" class="img">
+    <img src="assets/img/LogosBiotropo/Colaboradores.png" alt="">
+  </div> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
