--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class=" col-lg-6 py-5 py-lg-0 order-2 order-lg-1" data-aos="fade-right">
           <h1>Biotropo</h1>
           <h2>Festival de cortometraje y video corto de Divulgación de la Ciencia y el Ambiente.</h2>
-          <a href="assets/img/PDF/Convocatoria Biotropo.pdf" target="_blank" class="btn-get-started scrollto">Convocatoria</a>
+          <a href="assets/img/PDF/CONVOCATORIA BIOTROPO 2026..pdf" target="_blank" class="btn-get-started scrollto">Convocatoria</a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
           <img src="assets/img/LogosBiotropo/a-color-2.png" class="img-fluid" alt="">
