--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li> -->
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-          <li><a class="getstarted scrollto" href="assets/img/PDF/Convocatoria Biotropo.pdf" target="_blank">Convocatoria</a></li>
+          <li><a class="getstarted scrollto" href="assets/img/PDF/CONVOCATORIA BIOTROPO 2026..pdf" target="_blank">Convocatoria</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
